@@ -24,6 +24,7 @@ Contributors:
 #include "mosquitto_ctrl.h"
 #include "get_password.h"
 #include "password_mosq.h"
+#include "dynamic_security.h"
 
 int dynsec_client__create(int argc, char *argv[], cJSON *j_command)
 {
@@ -147,6 +148,165 @@ int dynsec_client__set_id(int argc, char *argv[], cJSON *j_command)
 	}else{
 		return MOSQ_ERR_SUCCESS;
 	}
+}
+
+int dynsec_client__file_set_password(int argc, char *argv[], const char *file)
+{
+	char *username = NULL, *password = NULL;
+	long len;
+	FILE *fptr;
+	char *fstr;
+	cJSON *j_tree, *j_clients, *j_client;
+	cJSON *j_username, *j_password, *j_salt, *j_iterations;
+	struct dynsec__client client;
+	char *pw_buf = NULL, *salt_buf = NULL;
+	char *json_str;
+	int i;
+
+	memset(&client, 0, sizeof(client));
+
+	if(argc >= 2){
+		username = argv[0];
+		password = argv[1];
+	}else{
+		return MOSQ_ERR_INVAL;
+	}
+	for(i=2; i<argc; i++){
+		if(!strcmp(argv[i], "-i")){
+			if(i+1 == argc){
+				fprintf(stderr, "Error: -i argument given, but no iterations provided.\n");
+				return MOSQ_ERR_INVAL;
+			}
+			client.pw.iterations = atoi(argv[i+1]);
+			i++;
+		}else{
+			fprintf(stderr, "Error: Unknown argument: %s\n", argv[i]);
+			return MOSQ_ERR_INVAL;
+		}
+	}
+
+	fptr = fopen(file, "rb");
+	if(fptr == NULL){
+		fprintf(stderr, "Error: Unable to open %s.\n", file);
+		return MOSQ_ERR_INVAL;
+	}
+	fseek(fptr, 0, SEEK_END);
+	len = ftell(fptr);
+	fseek(fptr, 0, SEEK_SET);
+	if(len <= 0){
+		fprintf(stderr, "Error: %s is empty.\n", file);
+		fclose(fptr);
+		return MOSQ_ERR_INVAL;
+	}
+
+	fstr = calloc(1, (size_t)len+1);
+	if(fstr == NULL){
+		fclose(fptr);
+		return MOSQ_ERR_NOMEM;
+	}
+	if(fread(fstr, 1, (size_t)len, fptr) != (size_t)len){
+		fprintf(stderr, "Error: Incomplete read of %s.\n", file);
+		fclose(fptr);
+		return MOSQ_ERR_NOMEM;
+	}
+	fclose(fptr);
+
+	j_tree = cJSON_Parse(fstr);
+	free(fstr);
+
+	if(j_tree == NULL){
+		fprintf(stderr, "Error: %s is not valid JSON.\n", file);
+		return MOSQ_ERR_INVAL;
+	}
+
+	j_clients = cJSON_GetObjectItem(j_tree, "clients");
+	if(j_clients == NULL || !cJSON_IsArray(j_clients)){
+		fprintf(stderr, "Error: %s is not a valid dynamic-security config file.\n", file);
+		cJSON_Delete(j_tree);
+		return MOSQ_ERR_INVAL;
+	}
+
+	cJSON_ArrayForEach(j_client, j_clients){
+		if(cJSON_IsObject(j_client) == true){
+			j_username = cJSON_GetObjectItem(j_client, "username");
+			if(j_username && cJSON_IsString(j_username)){
+				if(!strcmp(j_username->valuestring, username)){
+					if(dynsec_auth__pw_hash(&client, password, client.pw.password_hash, sizeof(client.pw.password_hash), true) != MOSQ_ERR_SUCCESS){
+						fprintf(stderr, "Error: Problem generating password hash.\n");
+						cJSON_Delete(j_tree);
+						return MOSQ_ERR_UNKNOWN;
+					}
+
+					if(base64__encode(client.pw.password_hash, sizeof(client.pw.password_hash), &pw_buf) != MOSQ_ERR_SUCCESS){
+						fprintf(stderr, "Error: Problem generating password hash.\n");
+						cJSON_Delete(j_tree);
+						free(pw_buf);
+						free(salt_buf);
+						return MOSQ_ERR_UNKNOWN;
+					}
+					if(base64__encode(client.pw.salt, client.pw.salt_len, &salt_buf) != MOSQ_ERR_SUCCESS){
+						fprintf(stderr, "Error: Problem generating password hash.\n");
+						cJSON_Delete(j_tree);
+						free(pw_buf);
+						free(salt_buf);
+						return MOSQ_ERR_UNKNOWN;
+					}
+					j_password = cJSON_CreateString(pw_buf);
+					if(j_password == NULL){
+						fprintf(stderr, "Error: Out of memory.\n");
+						cJSON_Delete(j_tree);
+						free(pw_buf);
+						free(salt_buf);
+						return MOSQ_ERR_NOMEM;
+					}
+					j_salt = cJSON_CreateString(salt_buf);
+					if(j_salt == NULL){
+						fprintf(stderr, "Error: Out of memory.\n");
+						cJSON_Delete(j_password);
+						cJSON_Delete(j_tree);
+						free(pw_buf);
+						free(salt_buf);
+						return MOSQ_ERR_NOMEM;
+					}
+					j_iterations = cJSON_CreateNumber(client.pw.iterations);
+					if(j_iterations == NULL){
+						fprintf(stderr, "Error: Out of memory.\n");
+						cJSON_Delete(j_password);
+						cJSON_Delete(j_salt);
+						cJSON_Delete(j_tree);
+						free(pw_buf);
+						free(salt_buf);
+						return MOSQ_ERR_NOMEM;
+					}
+					cJSON_ReplaceItemInObject(j_client, "password", j_password);
+					cJSON_ReplaceItemInObject(j_client, "salt", j_salt);
+					cJSON_ReplaceItemInObject(j_client, "iterations", j_iterations);
+					free(pw_buf);
+					free(salt_buf);
+
+					json_str = cJSON_Print(j_tree);
+					cJSON_Delete(j_tree);
+					if(json_str == NULL){
+						fprintf(stderr, "Error: Out of memory.\n");
+						return MOSQ_ERR_NOMEM;
+					}
+					fptr = fopen(file, "wb");
+					if(fptr == NULL){
+						fprintf(stderr, "Error: Unable to write to %s.\n", file);
+						free(json_str);
+						return MOSQ_ERR_UNKNOWN;
+					}
+					fprintf(fptr, "%s", json_str);
+					free(json_str);
+					fclose(fptr);
+					return MOSQ_ERR_SUCCESS;
+				}
+			}
+		}
+	}
+
+	fprintf(stderr, "Error: Client %s not found.\n", username);
+	return MOSQ_ERR_SUCCESS;
 }
 
 int dynsec_client__set_password(int argc, char *argv[], cJSON *j_command)
